--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -13,5 +13,6 @@
     <string name="registerDireccion">Enderezo</string>
     <string name="registerCodigoPostal">Código Postal</string>
     <string name="registerSiCuenta">Fai clic aquí se xa tes unha conta</string>
+    <string name="registro">Rexistro</string>
 
 </resources>
